# tdgram

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  td_api.json
tdgram/: __init__.py  client.py  exceptions.py
tdgram/dispatcher/: dispatcher.py
tdgram/methods/: __init__.py  accept_call.py  accept_terms_of_service.py  activate_story_stealth_mode.py  add_bot_media_preview.py  add_chat_folder_by_invite_link.py  add_chat_member.py  add_chat_members.py  add_chat_to_list.py  add_contact.py  add_custom_server_language_pack.py  add_favorite_sticker.py  add_file_to_downloads.py  add_local_message.py  add_log_message.py  add_message_reaction.py  add_network_statistics.py  add_paid_message_reaction.py  add_pending_paid_message_reaction.py  add_proxy.py  add_quick_reply_shortcut_inline_query_result_message.py  add_quick_reply_shortcut_message.py  add_quick_reply_shortcut_message_album.py  add_recent_sticker.py  add_recently_found_chat.py  add_saved_animation.py  add_saved_notification_sound.py  add_sticker_to_set.py  allow_bot_to_send_messages.py  answer_callback_query.py  answer_custom_query.py  answer_inline_query.py  answer_pre_checkout_query.py  answer_shipping_query.py  answer_web_app_query.py  apply_premium_gift_code.py  assign_app_store_transaction.py  assign_google_play_transaction.py  ban_chat_member.py  base.py  (+781 more)
tdgram/tdjson/: __init__.py  base.py  client.py
tdgram/types/: __init__.py  accent_color.py  account_ttl.py  added_reaction.py  added_reactions.py  address.py  affiliate_info.py  affiliate_program_info.py  affiliate_program_parameters.py  (+1720 more)
