[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdgram"
dynamic = ["version"]
description = "TDGram is pretty and asynchronous wrapper for TDLib"
readme = "README.md"
license = "MIT"
authors = [
    { name = "sheldy" },
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "adaptix @ git+ssh://git@github.com/reagento/adaptix.git@develop"
]

[project.urls]
Homepage = "https://github.com/sheldygg/tdgram"

[tool.hatch.version]
path = "tdgram/__meta__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/tdgram",
]
[tool.hatch.metadata]
allow-direct-references = true